methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:14: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:20: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:30: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();		
                ^